--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -110,6 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
 allow 118.163.74.160;
+allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -145,6 +145,7 @@ allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 149.202.79.129;
+allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.53.35.204;
@@ -620,6 +621,7 @@ allow 192.42.116.23;
 allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
+allow 192.42.116.27;
 allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
@@ -793,6 +795,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
+allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -1067,6 +1070,7 @@ allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
+allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
@@ -1119,7 +1123,6 @@ allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
-allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1230,7 +1233,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
@@ -1537,7 +1539,6 @@ allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 44.194.218.96;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1641,6 +1642,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.206.60.170;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1660,7 +1662,6 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
-allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
@@ -1707,6 +1708,7 @@ allow 77.72.85.119;
 allow 77.81.247.72;
 allow 77.91.122.149;
 allow 77.91.123.97;
+allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
@@ -1720,6 +1722,7 @@ allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
