--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -110,6 +109,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
 set_real_ip_from 118.163.74.160;
+set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
@@ -145,6 +145,7 @@ set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 149.202.79.129;
+set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.53.35.204;
@@ -620,6 +621,7 @@ set_real_ip_from 192.42.116.23;
 set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
+set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.46.227.185;
 set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
@@ -793,6 +795,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -1067,6 +1070,7 @@ set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
+set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:b500:408:3100::1;
 set_real_ip_from 2607:f530:8002::19;
@@ -1119,7 +1123,6 @@ set_real_ip_from 2a00:1169:110:2990::;
 set_real_ip_from 2a00:1169:112:de0::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
-set_real_ip_from 2a00:1169:11f:d680::;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
@@ -1230,7 +1233,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
@@ -1537,7 +1539,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 44.194.218.96;
 set_real_ip_from 45.120.178.198;
 set_real_ip_from 45.120.178.253;
 set_real_ip_from 45.120.178.83;
@@ -1641,6 +1642,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.206.60.170;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1660,7 +1662,6 @@ set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
 set_real_ip_from 5.255.98.198;
 set_real_ip_from 5.255.98.23;
-set_real_ip_from 5.255.99.108;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
@@ -1707,6 +1708,7 @@ set_real_ip_from 77.72.85.119;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.122.149;
 set_real_ip_from 77.91.123.97;
+set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
@@ -1720,6 +1722,7 @@ set_real_ip_from 80.78.24.207;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
