--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -93,6 +93,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -232,6 +233,7 @@ set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
+set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:b500:408:3100::1;
 set_real_ip_from 2607:f530:8002::19;
@@ -283,7 +285,6 @@ set_real_ip_from 2a00:1169:110:2990::;
 set_real_ip_from 2a00:1169:112:de0::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
-set_real_ip_from 2a00:1169:11f:d680::;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
@@ -394,7 +395,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
