--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -110,7 +110,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -564,6 +563,7 @@ allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
+allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
