--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,6 +110,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -119,6 +120,7 @@ allow 130.193.15.186;
 allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
+allow 138.128.222.68;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
@@ -162,6 +164,7 @@ allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
+allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 170.187.228.128;
@@ -218,13 +221,13 @@ allow 179.43.159.196;
 allow 179.43.159.197;
 allow 179.43.159.198;
 allow 179.43.159.199;
-allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.210.238.66;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -669,7 +672,6 @@ allow 198.251.89.96;
 allow 198.46.166.157;
 allow 198.50.128.237;
 allow 198.58.107.53;
-allow 198.96.155.3;
 allow 198.98.48.192;
 allow 198.98.48.20;
 allow 198.98.48.33;
@@ -802,6 +804,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -911,7 +914,6 @@ allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1255,6 +1257,8 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
+allow 2a05:b0c7:6978::1;
+allow 2a05:b0c7:6b6c::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
@@ -1529,7 +1533,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.217.82.37;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1601,7 +1604,6 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.215.41;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1628,7 +1630,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 5.22.159.135;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1692,6 +1693,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.45.79;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1704,7 +1706,6 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.153.138.120;
-allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
 allow 82.153.138.79;
@@ -1712,7 +1713,6 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1794,10 +1794,12 @@ allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.103.124.101;
+allow 94.103.124.104;
 allow 94.103.124.107;
 allow 94.103.124.121;
 allow 94.103.124.46;
 allow 94.103.124.90;
+allow 94.103.124.91;
 allow 94.103.124.98;
 allow 94.131.110.58;
 allow 94.140.115.63;
