--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,6 +109,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -119,7 +120,6 @@ allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.128.222.68;
-allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.11.62;
@@ -208,7 +208,6 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
-allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
 allow 179.43.128.16;
@@ -240,7 +239,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
@@ -274,7 +272,6 @@ allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
-allow 185.177.151.34;
 allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
@@ -435,6 +432,7 @@ allow 185.220.101.45;
 allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
+allow 185.220.101.49;
 allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
@@ -800,6 +798,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -1066,7 +1065,6 @@ allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::130;
 allow 2620:18c:0:192::131;
@@ -1224,7 +1222,6 @@ allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
-allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
@@ -1247,7 +1244,6 @@ allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
@@ -1398,6 +1394,7 @@ allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
+allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
@@ -1514,7 +1511,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.198.83.242;
+allow 3.211.188.231;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1597,6 +1594,7 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
+allow 46.195.210.154;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1640,7 +1638,6 @@ allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
-allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
@@ -1674,7 +1671,6 @@ allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
 allow 74.207.248.172;
-allow 74.208.106.128;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
@@ -1686,7 +1682,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.45.79;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1781,6 +1776,7 @@ allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
+allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.99.104.128;
@@ -1789,7 +1785,6 @@ allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.103.124.101;
 allow 94.103.124.104;
-allow 94.103.124.107;
 allow 94.103.124.121;
 allow 94.103.124.46;
 allow 94.103.124.90;
