--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -110,6 +110,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -237,7 +238,6 @@ deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:b500:408:3100::1;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::130;
 deny 2620:18c:0:192::131;
@@ -394,7 +394,6 @@ deny 2a03:e600:100::70;
 deny 2a03:e600:100::71;
 deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
-deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
@@ -417,7 +416,6 @@ deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6841::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
@@ -568,6 +566,7 @@ deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
+deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
